# country-logger

./: .gitignore  Cargo.toml  map_svg_license.txt
migrations/2023-12-11-132652_create_countries/: down.sql  up.sql
migrations/2023-12-11-151905_create_country_visits/: down.sql  up.sql
migrations/2023-12-11-213217_create_country_borders/: up.sql
migrations/2023-12-28-162754_add_country_notes/: down.sql  up.sql
src/: base_data.rs  countries.yaml  database.rs  flag_helper.rs  importer.rs  main.rs  models.rs  schema.rs  svg_helper.rs  widgets.rs
src/widgets/: country_filter.rs  country_info.rs  country_list.rs  world_map.rs
