[package]
name = "country-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
diesel = { version = "2.1.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
homedir = "0.2.1"
iced = { version = "0.10.0", features = ["canvas"] }
include_dir = "0.7.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
r2d2 = "0.8.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
svg = "0.14.0"